# LPI_Inventario_STL

./: CMakeLists.txt  README.md  a.out
buildclear/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: categoria.h  inventario.h  produto.h
src/: inventario.cpp  main.cpp  produto.cpp
